docs/pages/versions/v56.0.0/sdk/calendar-next.mdx
---
title: Calendar (next)
description: A library that provides an API for interacting with the device's system calendars, events, reminders, and associated records.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-calendar/src/next'
packageName: 'expo-calendar'
platforms: ['ios*', 'android*']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';

> **info** The `next` version of the Calendar API is included in the `expo-calendar` library. It can be used alongside the previous API, and offers a simplified, object oriented way of performing calendar operations.

> **important** To provide quicker updates, `expo-calendar/next` is currently unsupported in Expo Go and Snack. To use it, create a [development build](/develop/development-builds/create-a-build/).

`expo-calendar` provides an API for interacting with the device's system calendars, events, reminders, and associated records.

Additionally, it provides methods to launch the [system-provided calendar UI](#launching-system-provided-calendar-dialogs) to allow the user to view or edit events. On iOS, they present either [`EKEventViewController`](https://developer.apple.com/documentation/eventkitui/ekeventviewcontroller) or [`EKEventEditViewController`](https://developer.apple.com/documentation/eventkitui/ekeventeditviewcontroller) as a modal.

## Installation

<APIInstallSection />

## Configuration in app config

You can configure `expo-calendar` using its built-in [config plugin](/config-plugins/introduction/) if you use config plugins in your project ([Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)). The plugin allows you to configure various properties that cannot be set at runtime and require building a new app binary to take effect. If your app does **not** use CNG, then you'll need to manually configure the library.

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-calendar",
        {
          "calendarPermission": "The app needs to access your calendar."
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'calendarPermission',
      platform: 'ios',
      description: 'A string to set the [`NSCalendarsUsageDescription`](#ios) permission message.',
      default: '"Allow $(PRODUCT_NAME) to access your calendar"',
    },
    {
      name: 'remindersPermission',
      platform: 'ios',
      description: 'A string to set the [`NSRemindersUsageDescription`](#ios) permission message.',
      default: '"Allow $(PRODUCT_NAME) to access your reminders"',
    },
    {
      name: 'writeOnlyCalendarPermission',
      platform: 'ios',
      description:
        'A string to set the [`NSCalendarsWriteOnlyAccessUsageDescription`](#ios) permission message, shown when requesting write-only calendar access (iOS 17+). Only used when `writeOnlyAccess` is `true`.',
      default: '"Allow $(PRODUCT_NAME) to add events to your calendars"',
    },
    {
      name: 'writeOnlyAccess',
      platform: 'ios',
      description:
        'When `true`, requests write-only calendar access (iOS 17+). Sets `NSCalendarsWriteOnlyAccessUsageDescription` and omits `NSCalendarsFullAccessUsageDescription`.',
      default: 'false',
    },
  ]}
/>

<ConfigReactNative>

If you're not using Continuous Native Generation ([CNG](/workflow/continuous-native-generation/)) (you're using native **ios** project manually), then you need to configure following permissions in your native project:

- For iOS, add `NSCalendarsUsageDescription`, `NSCalendarsFullAccessUsageDescription`, and `NSRemindersUsageDescription` to your project's **ios/[app]/Info.plist**:

  ```xml
  <key>NSCalendarsUsageDescription</key>
  <string>Allow $(PRODUCT_NAME) to access your calendar</string>
  <key>NSCalendarsFullAccessUsageDescription</key>
  <string>Allow $(PRODUCT_NAME) to access your calendar</string>
  <key>NSRemindersUsageDescription</key>
  <string>Allow $(PRODUCT_NAME) to access your reminders</string>
  ```

  When requesting write-only calendar access on iOS 17+, add `NSCalendarsWriteOnlyAccessUsageDescription` instead of `NSCalendarsFullAccessUsageDescription`:

  ```xml
  <key>NSCalendarsWriteOnlyAccessUsageDescription</key>
  <string>Allow $(PRODUCT_NAME) to add events to your calendars</string>
  ```

</ConfigReactNative>

## Usage

```jsx
import * as Calendar from 'expo-calendar/next';
import { useEffect } from 'react';
import { StyleSheet, View, Text, Button } from 'react-native';

const BasicUsage = () => {
  useEffect(() => {
    (async () => {
      const { status } = await Calendar.requestCalendarPermissions();
      if (status === 'granted') {
        const calendars = Calendar.getCalendars(Calendar.EntityTypes.EVENT);
        console.log('Here are all your calendars:');
        console.log(JSON.stringify(calendars));
      }
    })();
  }, []);

  return (
    <View style={styles.container}>
      <Text>Calendar Module Example</Text>
      <Button title="Create a new calendar" onPress={createCalendar} />
    </View>
  );
};

async function createCalendar() {
  const newCalendar = await Calendar.createCalendar({
    title: 'Expo Calendar',
    color: 'blue',
    entityType: Calendar.EntityTypes.EVENT,
  });
  console.log(`Your new calendar: ${JSON.stringify(newCalendar)}`);
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    backgroundColor: '#fff',
    alignItems: 'center',
    justifyContent: 'space-around',
  },
});
```

## API

```js
import * as Calendar from 'expo-calendar/next';
```

Unless specified otherwise, all dates are returned in the ISO 8601 format.

<APISection
  packageName="expo-calendar-next"
  apiName="Calendar Next"
  headersMapping={{
    systemProvidedUI: 'Launching system-provided calendar dialogs',
  }}
/>

## Permissions

### Android

If you only intend to use the [system-provided calendar UI](#launching-system-provided-calendar-dialogs), you don't need to request any permissions.

Otherwise, you must add the following permissions to your **app.json** inside the [`expo.android.permissions`](../config/app/#permissions) array.

<AndroidPermissions permissions={['READ_CALENDAR', 'WRITE_CALENDAR']} />

### iOS

If you only intend to create events using system-provided calendar UI with [`createEventInCalendarAsync`](#createeventincalendarasynceventdata-presentationoptions), you don't need to request permissions.

The following usage description keys are used by this library:

<IOSPermissions
  permissions={[
    'NSCalendarsUsageDescription',
    {
      name: 'NSCalendarsFullAccessUsageDescription',
      description:
        "A message that tells the user why the app is requesting full access to the user's calendar data.",
    },
    {
      name: 'NSCalendarsWriteOnlyAccessUsageDescription',
      description:
        "A message that tells the user why the app is requesting write-only access to the user's calendar data.",
    },
    'NSRemindersUsageDescription',
  ]}
/>
